@@ -1,3 +1,5 @@
+(r5027) Fix a glitch in r5021 which caused wrong display in the file and email viewers.
+
 v0.11 - 2009-01-08 - Liquorice
 (r5023) Make the info box left of the item selection in the editor a bit more useful: Remove the static "Status Info Line [12345]" text and do not overflow the box with the item name.
 (r5005) Fix a vanilla display glitch in the editor: Now always draw a shadow for the name, health, slot and waypoints for mercs instead of doing it randomly.
